# Ghoulish-Power

./: Cargo.toml  Makefile.toml  rust-toolchain.toml
.github/workflows/: continous_integration.yml
src/: main.rs
src/controllers/: mod.rs  random_controller.rs
src/models/soldier/: elements.rs  ghoul.rs  ghoul_types.rs  mod.rs  weapon.rs
src/models/soldier/constitution/: armour.rs  health.rs  mana.rs  mod.rs
src/models/soldier/types/: armour_types.rs  ghoul_types.rs  mod.rs  weapon_types.rs
src/presenters/: console.rs  ghoul_presenter.rs  mod.rs
src/state/: game.rs  game_loop.rs  mod.rs  states.rs
