[package]
name = "ghoulish-power"
version = "0.1.2"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Ghoulish-Power"
repository = "https://github.com/Steelstone3/Ghoulish-Power"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
# serde = { features = ["derive"], version = "1" }
inquire = "0.7"
rand = "0"
rand_derive2 = "0"
rstest = "0"
pseudo = "0"