[package]
name = "ghoulish-power"
version = "0.1.7"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Ghoulish-Power"
repository = "https://github.com/Steelstone3/Ghoulish-Power"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
# serde = { version = "1", features = ["derive"]  }
# toml = "0"
# rfd = "0"
mockall = "0"
inquire = "0.7"
rand = "0"
rand_derive2 = "0"
rstest = "0"
